Configure CORS with dynamic frontend URL
Added frontend URL configuration for CORS settings.